adding nav bar on mobile

--- a/src/styles/sass/_header.scss
+++ b/src/styles/sass/_header.scss
@@ -8,6 +8,7 @@ header {
     display: none;
     @media screen and (max-width: 900px) {
       display: inline-block;
+      cursor: pointer;
     }
   }
   nav {
