--- a/src/styles/css/app.css
+++ b/src/styles/css/app.css
@@ -20,6 +20,7 @@ header .hamburger__icon {
 @media screen and (max-width: 900px) {
   header .hamburger__icon {
     display: inline-block;
+    cursor: pointer;
   }
 }
 
@@ -208,6 +209,7 @@ header nav .nav__list .login__button:hover {
 }
 
 .bookmark__manager__hero .illustration__container {
+  z-index: -1;
   min-width: 400px;
   position: absolute;
   right: -5%;
@@ -1029,5 +1031,21 @@ footer .attribution a {
   .app__container .wrapper {
     width: 80%;
   }
+}
+
+.overlay {
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(37, 43, 70, 0.9);
+}
+
+.index__lower {
+  z-index: -1 !important;
 }
 /*# sourceMappingURL=app.css.map */
