--- a/src/styles/sass/app.scss
+++ b/src/styles/sass/app.scss
@@ -98,3 +98,17 @@
     }
   }
 }
+.overlay {
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(37, 43, 70, 0.9);
+}
+.index__lower {
+  z-index: -1 !important;
+}
