--- a/src/styles/sass/_header.scss
+++ b/src/styles/sass/_header.scss
@@ -1,4 +1,5 @@
-header {
+.desktop__header,
+.mobile__header {
   display: flex;
   width: 100%;
   justify-content: space-between;
@@ -45,6 +46,69 @@ header {
           color: $soft-red;
           background-color: #fff;
         }
+      }
+    }
+  }
+}
+.mobile__header {
+  width: 85%;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  flex-flow: column nowrap;
+  .header__head {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+  }
+  nav {
+    margin-top: 40px;
+    width: 100%;
+    .nav__list {
+      .nav__item {
+        font-size: 20px;
+        text-align: center;
+        color: #fff;
+        line-height: 3.8;
+        border-bottom: 1px solid #5f688d80;
+      }
+      .features {
+        border-top: 1px solid #5f688d80;
+      }
+      .login__button {
+        width: 100%;
+        margin: 30px 0;
+        padding: 10px;
+        line-height: 2;
+        background-color: transparent;
+        border: 2px solid #fff;
+        &:hover {
+          border: 2px solid $very-dark-blue;
+          background-color: #fff;
+          color: $very-dark-blue;
+        }
+      }
+    }
+  }
+  .social__media {
+    margin-top: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    @media screen and (max-width: 800px) {
+      gap: 30px;
+    }
+    svg {
+      cursor: pointer;
+      path {
+        transition: all 0.2s ease-in-out;
+      }
+      &:hover path {
+        fill: $soft-red;
       }
     }
   }
