--- a/src/styles/sass/_hero.scss
+++ b/src/styles/sass/_hero.scss
@@ -29,11 +29,13 @@
       margin-top: 15px;
       display: flex;
       flex-wrap: wrap;
-
+      @media screen and (max-width: 900px) {
+        justify-content: center;
+        align-items: center;
+      }
       .button {
         padding: 15px 20px;
         @media screen and (max-width: 900px) {
-          margin: auto;
           justify-content: center;
           align-items: center;
         }
@@ -46,9 +48,9 @@
         @media screen and (max-width: 700px) {
           margin-right: 5px;
         }
-        @media screen and (max-width: 360px) {
-          margin-right: auto;
+        @media screen and (max-width: 380px) {
           margin-bottom: 1px;
+          margin-right: 0;
         }
         &:hover {
           background-color: #fff;
@@ -62,12 +64,20 @@
         border: 2px solid #f5f5f5;
         transition: all 0.2s ease-in-out;
         font-weight: 500;
+        @media screen and (max-width: 960px) {
+          margin-left: 0;
+          margin-top: 15px;
+        }
+        @media screen and (max-width: 900px) {
+          margin-left: 0;
+          margin-top: 0px;
+        }
         @media screen and (max-width: 700px) {
           margin-left: 5px;
         }
-        @media screen and (max-width: 360px) {
-          margin-left: auto;
+        @media screen and (max-width: 380px) {
           margin-top: 10px;
+          margin-left: 0px;
         }
         &:hover {
           background-color: #fff;
