--- a/src/styles/sass/_newsletter.scss
+++ b/src/styles/sass/_newsletter.scss
@@ -30,15 +30,23 @@
       width: auto;
       gap: 10px;
     }
-    .email__input {
-      outline: none;
-      border: none;
-      font-family: inherit;
-      padding: 15px;
+    .input__container {
       width: 300px;
       border-radius: 5px;
       @media screen and (max-width: 550px) {
         width: 100%;
+      }
+      .email__input {
+        width: 100%;
+        outline: none;
+        border: none;
+        font-family: inherit;
+        padding: 15px;
+        border-radius: 5px;
+      }
+      span {
+        font-size: 12px;
+        font-style: italic;
       }
     }
     button {
@@ -58,4 +66,17 @@
       }
     }
   }
+}
+.error {
+  background-color: hsl(0, 94%, 60%);
+  padding: 3px;
+  margin-top: 20px;
+}
+.valid {
+  margin-top: 20px;
+  background-color: hsl(147, 52%, 44%);
+  padding: 3px;
+}
+.resize__heading {
+  margin: 30px auto 10px auto !important;
 }
